--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>sebastianforst.de</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" integrity="sha384-dobUC+gx9s0WVvLOrNGZekeKqWu9CsJfLL8oNEaF5IeKJrH9Vno8J7grXY2F38Nm" />
+    <link rel="stylesheet" href="style.css" integrity="sha384-dobUC+gx9s0WVvLOrNGZekeKqWu9CsJfLL8oNEaF5IeKJrH9Vno8J7grXY2F38Nm" crossorigin="anonymous" />
 </head>
 <body>
     <h1>Welcome</h1>
