--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
     <title>sebastianforst.de</title>
+    <meta charset="utf-8" />
+    <meta name="referrer" content="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" integrity="sha384-dobUC+gx9s0WVvLOrNGZekeKqWu9CsJfLL8oNEaF5IeKJrH9Vno8J7grXY2F38Nm" crossorigin="anonymous" />
 </head>
